--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,15 +17,18 @@
     "@mui/icons-material": "^5.16.6",
     "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.6",
+    "@types/chart.js": "^2.9.41",
     "@types/eventsource": "^1.1.15",
     "@types/jwt-decode": "^3.1.0",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.7",
     "firebase": "^10.12.5",
     "http-proxy-middleware": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.0",
     "react-scripts": "^5.0.1",
