--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.16.6",
     "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.6",
+    "@react-spring/web": "^9.7.5",
     "@types/chart.js": "^2.9.41",
     "@types/eventsource": "^1.1.15",
     "@types/jwt-decode": "^3.1.0",
