--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@types/jwt-decode": "^3.1.0",
     "axios": "^1.7.2",
     "chart.js": "^4.4.7",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "firebase": "^10.12.5",
     "http-proxy-middleware": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
