--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.0",
     "react-scripts": "^5.0.1",
+    "typeface-montserrat": "^1.1.13",
     "typescript": "^5.5.3",
     "zustand": "^4.5.4"
   },
