--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,8 +32,10 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.25.0",
     "react-scripts": "^5.0.1",
+    "remark-gfm": "^4.0.1",
     "typeface-montserrat": "^1.1.13",
     "typescript": "^5.5.3",
     "zustand": "^4.5.4"
