--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "firebase-admin": "^12.3.1",
     "google-auth-library": "^9.15.0",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.6.1",
     "mongoose": "^8.5.2",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
