--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -40,6 +40,7 @@ jobs:
             SQS_REGION=${{ secrets.SQS_REGION }}
             QUIZ_QUEUE_URL=${{ secrets.QUIZ_QUEUE_URL }}
             REPORT_QUEUE_URL=${{ secrets.REPORT_QUEUE_URL }}
+            CHAT_QUEUE_URL=${{ secrets.CHAT_QUEUE_URL }}
             AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
             AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
             AWS_REGION=${{ secrets.AWS_REGION }}
