--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,6 +13,7 @@ ARG OPENAI_API_KEY
 ARG SQS_REGION
 ARG QUIZ_QUEUE_URL
 ARG REPORT_QUEUE_URL
+ARG CHAT_QUEUE_URL
 ARG AWS_ACCESS_KEY_ID
 ARG AWS_SECRET_ACCESS_KEY
 ARG AWS_REGION
@@ -36,6 +37,7 @@ ENV OPENAI_API_KEY=$OPENAI_API_KEY
 ENV SQS_REGION=$SQS_REGION
 ENV QUIZ_QUEUE_URL=$QUIZ_QUEUE_URL
 ENV REPORT_QUEUE_URL=$REPORT_QUEUE_URL
+ENV CHAT_QUEUE_URL=$CHAT_QUEUE_URL
 ENV AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
 ENV AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
 ENV AWS_REGION=$AWS_REGION
