--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "multer-s3": "^3.0.1",
     "node-cron": "^3.0.3",
     "openai": "^4.54.0",
+    "p-limit": "^6.2.0",
     "redis": "^4.7.0",
     "redisson": "^0.0.0",
     "redlock": "^5.0.0-beta.2",
