--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.8.4",
     "chart.js": "^4.4.7",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "date-fns": "^4.1.0",
     "firebase": "^10.12.5",
     "http-proxy-middleware": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
