--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/chrome": "^0.0.323",
     "@types/lodash": "^4.17.16",
+    "@types/node": "^22.15.21",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
