--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@types/howler": "^2.2.12",
     "@types/jwt-decode": "^3.1.0",
     "axios": "^1.8.4",
+    "browser-image-compression": "^2.0.2",
     "chart.js": "^4.4.7",
     "chartjs-plugin-datalabels": "^2.2.0",
     "date-fns": "^4.1.0",
