--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@types/eventsource": "^1.1.15",
     "@types/howler": "^2.2.12",
     "@types/jwt-decode": "^3.1.0",
+    "@types/papaparse": "^5.3.16",
     "axios": "^1.8.4",
     "browser-image-compression": "^2.0.2",
     "chart.js": "^4.4.7",
@@ -33,6 +34,7 @@
     "http-proxy-middleware": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "papaparse": "^5.5.3",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
